Modifiers cage ignore face visibility #57294

Closed
opened 2018-10-18 15:40:01 +02:00 by Dalai Felinto · 3 comments

Blender Version
Broken: cfdd902d2d (blender2.8 HEAD)
Worked: 2.79a

Short description of error
Hidden faces are still visible when the modifier is set to show in edidt mode.

Exact steps for others to reproduce the error

  • Default cube, in object mode add a modifier (e.g., Ctrl+1 for subsurf).
  • Now in edit mesh mode select one of the faces and hide (h).
  • You still see the cage part of the hidden faces.

Or just open the simple 2.79a file:
cage_hide.blend

**Blender Version** Broken: cfdd902d2d5d (blender2.8 HEAD) Worked: 2.79a **Short description of error** Hidden faces are still visible when the modifier is set to show in edidt mode. **Exact steps for others to reproduce the error** * Default cube, in object mode add a modifier (e.g., Ctrl+1 for subsurf). * Now in edit mesh mode select one of the faces and hide (h). * You still see the cage part of the hidden faces. Or just open the simple 2.79a file: [cage_hide.blend](https://archive.blender.org/developer/F5125398/cage_hide.blend)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2018-10-18 15:40:32 +02:00

This issue was referenced by 6add652c38

This issue was referenced by 6add652c386198b1e3e126d4a88cd72b5bd97a88

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57294
No description provided.