Fix T57294: Modifiers cage ignore face visibility